[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/sprites/UI/button.png" type="Texture" id=1]
[ext_resource path="res://Themes/UI.tres" type="Theme" id=2]
[ext_resource path="res://UI/Menu.gd" type="Script" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="Menu" type="Node2D"]
pause_mode = 2
script = ExtResource( 3 )

[node name="BG" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="BG"]
margin_right = 640.0
margin_bottom = 480.0
color = Color( 0, 0, 0, 0.529412 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 323, 196 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="Levels" type="Button" parent="."]
margin_left = 240.0
margin_top = 173.0
margin_right = 406.0
margin_bottom = 211.0
theme = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.878431, 0.670588, 0.298039, 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Levels"
flat = true

[node name="Sprite2" type="Sprite" parent="."]
visible = false
position = Vector2( 323, 239 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="Settings" type="Button" parent="."]
visible = false
margin_left = 240.0
margin_top = 216.0
margin_right = 406.0
margin_bottom = 254.0
theme = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.878431, 0.670588, 0.298039, 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Settings"
flat = true

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 323, 266 )
scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="Main" type="Button" parent="."]
margin_left = 240.0
margin_top = 243.0
margin_right = 406.0
margin_bottom = 281.0
theme = ExtResource( 2 )
custom_colors/font_color_hover = Color( 0.878431, 0.670588, 0.298039, 1 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "Main menu"
flat = true

[connection signal="pressed" from="Levels" to="." method="_on_Levels_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Main" to="." method="_on_Main_pressed"]
